--- a/static/index.html
+++ b/static/index.html
@@ -185,7 +185,7 @@
                 <li class="am-dropdown dropbar" data-am-dropdown>
                     <a class="am-dropdown-toggle tpl-header-list-link" data-am-dropdown-toggle href="javascript:;">
                         <span class="tpl-header-list-user-nick">用户</span>
-                        <span class="tpl-header-list-user-ico"> <img src="assets/i/user.png"></span>
+                        <span class="tpl-header-list-user-ico"> <img src="static/assets/i/user.png"></span>
                     </a>
                     <ul class="am-dropdown-content">
                         <li><a href="#"><span class="am-icon-bell"></span> 资料</a></li>
@@ -215,7 +215,7 @@
 
 </header>
 
-<div class="get" style="background-image: url(assets/i/index.jpg);">
+<div class="get" style="background-image: url(static/assets/i/index.jpg); background-size: cover;">
     <div class="am-g">
         <div class="am-u-lg-12">
             <h1 class="get-title">漂流书单</h1>
@@ -552,6 +552,6 @@
 
 <script src="static/assets/js/jquery.min.js"></script>
 <script src="static/assets/js/amazeui.min.js"></script>
-<script src="static/assets/js/app.js"></script>
+<script src="static/assets/js/index.js"></script>
 </body>
 </html>
