we can login now

--- a/static/login.html
+++ b/static/login.html
@@ -90,16 +90,16 @@
                     </div>
 
                     <div data-tab-panel-1 class="am-tab-panel ">
-                        <form action="" class="am-form">
+                        <form action="login" method="POST" class="am-form">
                             <fieldset>
                                 <div class="am-form-group">
-                                    <label for="username_l">User Name</label>
-                                    <input type="text" id="username_l" minlength="3" placeholder="User ID"
+                                    <label for="account">User Name</label>
+                                    <input type="text" id="account" name="account" minlength="3" placeholder="User ID"
                                            class="am-form-field" required/>
                                 </div>
                                 <div class="am-form-group">
                                     <label for="password_l">Password</label>
-                                    <input type="password" id="password_l" minlength="5" placeholder="User Password"
+                                    <input type="password" id="password_l" name="password" minlength="5" placeholder="User Password"
                                            class="am-form-field" required/>
                                 </div>
                                 <!--div class="am-form-group myapp-login-treaty"><label class="am-form-label"></label><label class="am-checkbox-inline"> <input type="checkbox" value="橘子" name="docVlCb" minchecked="2" maxchecked="4" required="">已同意使用条约 </label></div-->
