--- a/react_app/assets/index.html
+++ b/react_app/assets/index.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brunch</title>
-  <link rel="stylesheet" href="/css/app.css">
-  <script src="/js/vendor.js"></script>
-  <script src="/js/app.js"></script>
+  <link rel="stylesheet" href="/static/react/css/app.css">
+  <script src="/static/react/js/vendor.js"></script>
+  <script src="/static/react/js/app.js"></script>
   <script>require('initialize');</script>
 </head>
 <body>
