add multi react page

--- a/react_app/assets/index.html
+++ b/react_app/assets/index.html
@@ -3,10 +3,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brunch</title>
-  <link rel="stylesheet" href="/static/react/css/app.css">
+  <link rel="stylesheet" href="/static/react/css/index.css">
   <script src="/static/react/js/vendor.js"></script>
-  <script src="/static/react/js/app.js"></script>
-  <script>require('initialize');</script>
+  <script src="/static/react/js/index.js"></script>
+  <script>require('index/initialize');</script>
 </head>
 <body>
   <div class="brunch">
