add mine page js

--- a/react_app/assets/mine.html
+++ b/react_app/assets/mine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Friends</title>
+  <title>Mine</title>
   <link rel="stylesheet" href="/static/react/css/mine.css">
   <script src="/static/react/js/vendor.js"></script>
   <script src="/static/react/js/mine.js"></script>
