--- a/react_app/assets/login.html
+++ b/react_app/assets/login.html
@@ -80,7 +80,7 @@
                                 <div class="am-form-group">
                                     <label for="password_r1">Password</label>
                                     <input type="password" id="password_r1" minlength="5" placeholder="确认密码"
-                                           data-equal-to="#password_r" class="am-form-field" required/>
+                                           data-equal-to="#password" class="am-form-field" required/>
                                 </div>
 
                                 <div class="am-form-group">
