Use sqlalchemy relationship in db_user.py

--- a/static/explore.html
+++ b/static/explore.html
@@ -59,7 +59,7 @@
     $('#update_name').click(function () {
         $.ajax({
             type:'POST',
-            url:'/test_interest',
+            url:'/test_friend',
             data:JSON.stringify({
                 'user_id':1,
             }),
