--- a/static/explore.html
+++ b/static/explore.html
@@ -59,7 +59,7 @@
     $('#update_name').click(function () {
         $.ajax({
             type:'POST',
-            url:'/test_moment',
+            url:'/get_moment',
             data:JSON.stringify({
                 'user_id':1,
             }),
